--- a/Project2/mallman.html
+++ b/Project2/mallman.html
@@ -8,7 +8,7 @@
 <HR>
 
 <FONT FACE="Helvetica,Arial"><B>
-Description: The document you requested has moved to a new location.  The new location is "https://www.apple.com/".
+Description: The document you requested has moved to a new location.  The new location is "https://www.apple.com/a/b.html".
 </B></FONT>
 <HR>
 </BODY>
